// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeadlineContent /> should render custom headline 1`] = `
<div
  className=""
>
  <WithStyles(Icon)
    className=""
    icon="lnr-trash"
  />
  <H3
    textAlign="center"
  >
    Something
  </H3>
  <H5>
    Something
  </H5>
</div>
`;

exports[`<HeadlineContent /> should render something 1`] = `
<div
  className=""
>
  <WithStyles(Icon)
    className=""
    icon="lnr-checkmark-circle"
  />
  <H3
    textAlign="center"
  />
  <H5>
    <FormattedMessage
      defaultMessage="You can customise headline Icon, Title and Text."
      id="app.ugcomponents.Dialog.components.DialogHeadline.customText"
    />
  </H5>
</div>
`;

exports[`<HeadlineContent /> templates should render add template 1`] = `
<div
  className=""
>
  <WithStyles(Icon)
    className="undefined"
    icon="lnr-plus-circle"
  />
  <H3
    textAlign="center"
  />
  <H5>
    <FormattedMessage
      defaultMessage="If you proceed this will add a new {type}."
      id="app.ugcomponents.Dialog.components.DialogHeadline.addText"
      values={
        Object {
          "type": "one",
        }
      }
    />
  </H5>
</div>
`;

exports[`<HeadlineContent /> templates should render confirm template 1`] = `
<div
  className=""
>
  <WithStyles(Icon)
    className="undefined"
    icon="lnr-checkmark-circle"
  />
  <H3
    textAlign="center"
  />
  <H5>
    <FormattedMessage
      defaultMessage="Are you sure you want to confirm this {type}?"
      id="app.ugcomponents.Dialog.components.DialogHeadline.dialogText"
      values={
        Object {
          "type": "one",
        }
      }
    />
  </H5>
</div>
`;

exports[`<HeadlineContent /> templates should render delete template 1`] = `
<div
  className=""
>
  <WithStyles(Icon)
    className=""
    icon="lnr-trash3"
  />
  <H3
    textAlign="center"
  />
  <H5>
    <FormattedMessage
      defaultMessage="Are you sure you want to delete this {type}? This cannot be undone."
      id="app.ugcomponents.Dialog.components.DialogHeadline.deleteText"
      values={
        Object {
          "type": "one",
        }
      }
    />
  </H5>
</div>
`;

exports[`<HeadlineContent /> types should render custom type 1`] = `
<div
  className=""
>
  <WithStyles(Icon)
    className=""
    icon="lnr-checkmark-circle"
  />
  <H3
    textAlign="center"
  />
  <H5>
    <FormattedMessage
      defaultMessage="You can customise headline Icon, Title and Text."
      id="app.ugcomponents.Dialog.components.DialogHeadline.customText"
    />
  </H5>
</div>
`;

exports[`<HeadlineContent /> types should render to tour type 1`] = `
<div
  className=""
>
  <WithStyles(Icon)
    className=""
    icon="lnr-checkmark-circle"
  />
  <H3
    textAlign="center"
  />
  <H5>
    <FormattedMessage
      defaultMessage="You can customise headline Icon, Title and Text."
      id="app.ugcomponents.Dialog.components.DialogHeadline.customText"
    />
  </H5>
</div>
`;
